deploy/generative_ai/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: generative-ai
  labels:    # categorizing k8s resources
    app: generative-ai
    group: generative-ai-services
    team: generative-ai-team
    network-group: generative-ai
spec:
  podSelector:
    matchLabels:  #  target specific Pods
      app: generative-ai
      group: generative-ai-services
      team: generative-ai-team
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          networking/access-generative-ai: http  # allows traffic FROM other Pods labeled with
    ports:
      - port: 8080
  - from:
    - ipBlock:
        cidr:  "192.168.1.0/24"  # allow traffic from specific IP addresses
  egress: []
